# JPLSpatial

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  premake5.lua
.github/workflows/: build.yml  cmake-multi-platform.yml  doxygen.yaml  doxygen.yml
Documentation/: index.md
Documentation/pages/: examples.md  index.md  integration.md
Documentation/theme/: header.html  jplspatial.css
Examples/HelloJPLSpatial/: CMakeLists.txt  README.md  main.cpp
Examples/SpatializerExample/: CMakeLists.txt  README.md  main.cpp
Spatialization/: CMakeLists.txt  premake5.lua
Spatialization/include/JPLSpatial/: AcousticMaterial.h  AirAbsorption.h  ChannelConversion.h  ChannelMap.h  Core.h  DistanceAttenuation.h  ErrorReporting.h  FrequencyBands.h  SpatialManager.h  SpeedOfSound.h  VBAP.h
Spatialization/include/JPLSpatial/Algo/: Algorithm.h  Random.h
Spatialization/include/JPLSpatial/Auralization/: ChannelMixing.h  CrossoverFilter.h  DelayLine.h  DirectSound.h  EarlyReflectionsBus.h  FractionalDelay.h  LateReverb.h  ReverbDesign.h  ReverbUtilities.h
Spatialization/include/JPLSpatial/Containers/: FlatMap.h  ScratchHashSet.h  StaticArray.h  ZipIterator.h
Spatialization/include/JPLSpatial/Geometry/: ConvexHullBuilder.h  Triangulation.h
Spatialization/include/JPLSpatial/Math/: ClosestPoint.h  Curves.h  DecibelsAndGain.h  DirectionEncoding.h  Math.h  MinimalBasis.h  MinimalMat.h  MinimalQuat.h  MinimalVec2.h  MinimalVec3.h  Position.h  SIMD.h  SIMDMath.h  Vec3Buffer.h  Vec3Math.h  Vec3Pack.h  Vec3Traits.h
Spatialization/include/JPLSpatial/Memory/: Bits.h  Memory.h
Spatialization/include/JPLSpatial/Panning/: DummySpeakers.h  PannerBase.h  VBAPEx.h  VBAPLUT2D.h  VBAPLUT3D.h  VBAPanning2D.h  VBAPanning3D.h
Spatialization/include/JPLSpatial/PathTracing/: Math.h  SceneInterface.h  SpecularPath.h  SpecularPathCache.h  SpecularRayTracing.h
Spatialization/include/JPLSpatial/Services/: DirectPathService.h  PanningService.h
Spatialization/include/JPLSpatial/Utilities/: AbstractIndex.h  GainEncoding.h  Hash.h  IDType.h  RealtimeObject.h  SmoothedValue.h  TypeUtilities.h  Variance.h
Spatialization/include/JPLSpatialization/: ChannelMap.h  Core.h
Spatialization/include/Spatialization/: ChannelMap.h  Core.h  ErrorReporting.h  VBAP.h
Spatialization/src/Spatialization/: AcousticMaterial.cpp  ErrorReporting.cpp
Spatialization/src/Spatialization/Auralization/: DirectSound.cpp  EarlyReflectionsBus.cpp  LateReverb.cpp
SpatializationTests/: CMakeLists.txt  Dependencies.cmake  premake5.lua
SpatializationTests/src/: main.cpp
SpatializationTests/src/Tests/: AttenuationCurveTest.cpp  ComputeVBAPTest.cpp  ComputeVBAPTest.h  CrossoverFilterTest.cpp  DelayLineTest.cpp  DirectPathServiceTest.cpp  DirectPathServiceTest.h  DirectionEncodingTest.cpp  DirectionEncodingTest.h  FlatMapTest.cpp  MathTest.cpp  MathTest.h  MemoryTest.cpp  MemoryTest.h  PanningServiceTest.cpp  PanningServiceTest.h  SIMDTest.cpp  SIMDTest.h  SpatializerTest.cpp  SpatializerTest.h  SpecularRayTracingTest.cpp  SquareRootTest.cpp  VBAP2DTest.cpp  VBAP2DTest.h  VBAP3DTest.cpp  VBAP3DTest.h  VBAPTest.h
SpatializationTests/src/Utility/: BoxTest.h  SceneInterfaceUtils.h  TestMemoryLeakDetector.cpp  TestMemoryLeakDetector.h  TestUtils.h  Vec3D.h  Vec3Types.h
cmake/: InterProcessOptimization.cmake
docs/html/: index.html  md__r_e_a_d_m_e.html  pages.html
docs/html/search/: pages_0.js
